# CMake-sandbox

./: .gitignore  CMakeLists.txt
inc/: Utils.h
src/: CMakeLists.txt  Utils.cc  main.cc
